# hackathon-opponent-analysis

./: .env.example  .gitignore  .requirements  PROJECT_OVERVIEW.md  readme.md  requirements.txt
.claude/: CLAUDE.md  settings.local.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  mock.py
backend/app/analysis/: form.py  game_state.py  identity.py  matchups.py  media_intel.py  players.py  referee.py
backend/app/ingestion/: api_football.py  upserts.py  wyscout_loader.py
backend/app/llm/: client.py  orchestrator.py  prompts.py
backend/app/models/: __init__.py  archetype.py  match.py  player.py  referee.py  standings.py  team.py
backend/app/routes/: chat.py  dossier.py  health.py  referees.py  teams.py
backend/app/schemas/: common.py  dossier.py
backend/data/raw_texts/: 2246_2024-07-14_programul-primelor-doua-etape-din-superliga-cfr-cluj-dinamo-_61edcee9.meta.json  (+53 more)
backend/scripts/: build_archetypes.py  clean_stats.py  feature_set_experiments.py  ingest_pinecone.py  ingest_referees.py  ingest_season.py  ingest_standings_h2h.py  scrape_media.py  silhouette_diagnostic.py  team_clustering_outcome_style.py  team_clustering_production_final.py  team_clustering_umap_only.py  team_clustering_visualisation.py  team_level_experiment.py  team_silhouette_sweep.py
backend/tests/: conftest.py  test_form.py  test_game_state.py  test_identity.py  test_ingestion.py  test_integration_dossier.py  test_llm_client.py  test_matchups.py  test_orchestrator.py  test_players.py  test_referee.py
frontend/: Dockerfile  (+5 more)
(+19 files in other folders)
