[project]
name = "opponent-analysis-backend"
version = "0.1.0"
description = "Opponent Dossier backend — FC Universitatea Cluj"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-python-dateutil",
]
viz = [
    "matplotlib>=3.8.0",
    "umap-learn>=0.5.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
